# midi-synth

./: CMakeLists.txt  README.md  main.c
utils/: midi.c  midi.h  midi_lut.h  note_lut.h  notes.h  playback.c  playback.h  synth.c  synth.h
